[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "debugpy>=1.6.6",
]

[project]
name = "sliver"
version = "0.8.0"
description = ""
authors = [
    {name = "Ricardo Marliere", email = "rbmarliere@gmail.com"},
]
dependencies = [
    "flask>=2.2.3",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=3.0.10",
    "flask-jwt-extended>=4.4.4",
    "flask-restful>=0.3.9",
    "waitress>=2.1.2",
    "ccxt>=3.0.33",
    "pandas>=1.5.3",
    "peewee>=3.16.0",
    "psycopg2-binary>=2.9.5",
    "python-dotenv>=1.0.0",
    "telethon>=1.27.0",
    "transformers>=4.27.3",
    "rpyc>=5.3.1",
    "tweepy>=4.13.0",
    "python-telegram-bot==13.13",
    "pylunar>=0.6.0",
    "emoji==0.6.0",
    "scikit-learn>=1.2.2",
    "nltk>=3.8.1",
    "tqdm>=4.65.0",
    "pandas-ta>=0.3.14b0",
    "langdetect>=1.0.9",
    "playwright>=1.36.0",
    "pytest-playwright>=0.3.3",
    "ipython>=8.14.0",
    "nest-asyncio>=1.5.6",
    "jmespath>=1.0.1",
    "nested-lookup>=0.2.25",
]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

[tool.pdm.scripts]
serve = {call = "sliver.core:serve", env_file = ".env"}
stream = {cmd = "python3 scripts/utils/hypnox_streamer.py", env_file = ".env"}
scrape = {cmd = "python3 scripts/utils/hypnox_scraper.py", env_file = ".env"}
train = {call = "sliver.models.train:train", env_file = ".env"}
watch = {call = "sliver.core:watch", env_file = ".env"}

[tool.ruff]
# src = ["src"]

[tool.ruff.isort]
known-first-party = ["sliver"]

